// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <Img> with isLoaded prop 1`] = `
<Img
  image="image.jpg"
  isLoaded={true}
>
  <styled.div
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\"",
        "filter": "none",
        "opacity": 1,
      }
    }
  >
    <div
      className="sc-bdVaJa cmnijN"
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\"",
          "filter": "none",
          "opacity": 1,
        }
      }
    />
  </styled.div>
</Img>
`;

exports[`should render <Img> without isLoaded prop 1`] = `
<Img
  image="image.jpg"
  isLoaded={false}
>
  <styled.div
    style={
      Object {
        "backgroundImage": "url(\\"image.jpg\\"",
        "filter": "blur(20px)",
        "opacity": 0.5,
      }
    }
  >
    <div
      className="sc-bdVaJa cmnijN"
      style={
        Object {
          "backgroundImage": "url(\\"image.jpg\\"",
          "filter": "blur(20px)",
          "opacity": 0.5,
        }
      }
    />
  </styled.div>
</Img>
`;
